@@ -392,9 +392,9 @@ FireGPGGmailMimeSender.prototype.ourSent = function(msgs, err, prefs)
 
 
 
-           /*     function changeStatusMessage(e)
+               function changeStatusMessage(e)
                 {
-                    var messageTd = this.ownerDocument.evaluate(".//td[@class='m14Grb']", this, null, XPathResult.FIRST_ORDERED_NODE_TYPE, null).singleNodeValue;
+                    var messageTd = this.ownerDocument.evaluate(".//td[@class='vh']", this, null, XPathResult.FIRST_ORDERED_NODE_TYPE, null).singleNodeValue;
 //						printAncestors("DOMAttrModified", e.target);
 //						jsdump("ChangeStatusMessage executing...");
                     if (this.style.visibility != "hidden")
@@ -403,9 +403,9 @@ FireGPGGmailMimeSender.prototype.ourSent = function(msgs, err, prefs)
                         this.removeEventListener("DOMAttrModified", changeStatusMessage, false);
                         // set the bottom of the message stack, as appropriate
                         var msgs = this.ownerDocument.evaluate(".//div[contains(@class, 'diLZtc')]//table/tr/td[contains(@class, 'eWTfhb')]//div[contains(@class, 'aWL81')]/div[position()=2]", this.ownerDocument.body, null, XPathResult.FIRST_ORDERED_NODE_TYPE, null).singleNodeValue;
-                        if (!msgs) messageTd.innerHTML = cGmail2.i18n.getString("MessageSend");
+                        if (!msgs || true) messageTd.innerHTML = cGmail2.i18n.getString("MessageSend");
                         else
-                        {
+                        { /*
 //							jsdump("Doing tha alternative");
                             messageTd.innerHTML = "Doop!!";
                             this.style.visibility = "hidden";
@@ -413,8 +413,12 @@ FireGPGGmailMimeSender.prototype.ourSent = function(msgs, err, prefs)
                             newmsgdiv.className = "XoqCub";
                             newmsgdiv.setAttribute("style", "");
                             msgs.appendChild(newmsgdiv);
-                            newmsgdiv.innerHTML = '<div class="n38jzf" style=""><table cellspacing="0" cellpadding="0" class="cyVRte"><tbody><tr><td class="EGPikb" style="background-position: 0px; background-repeat: no-repeat; background-image: url(rc?a=af&c=fff1a8&w=4&h=4);"/><td class="Ptde9b"/><td class="EGPikb" style="background-position: -4px 0px; background-repeat: no-repeat; background-image: url(rc?a=af&c=fff1a8&w=4&h=4);"/></tr><tr><td class="Ptde9b"/><td class="m14Grb">' +
+                            newmsgdiv.innerHTML = '<div class="b8" style=""><table cellspacing="0" cellpadding="0" class="cf ve"><tbody><tr><td class="EGPikb" style="background-position: 0px; background-repeat: no-repeat; background-image: url(rc?a=af&c=fff1a8&w=4&h=4);"/><td class="Ptde9b"/><td class="EGPikb" style="background-position: -4px 0px; background-repeat: no-repeat; background-image: url(rc?a=af&c=fff1a8&w=4&h=4);"/></tr><tr><td class="Ptde9b"/><td class="m14Grb">' +
 cGmail2.i18n.getString("MessageSend") + '</td><td class="Ptde9b"/></tr><tr><td class="EGPikb" style="background-position: 0px -4px; background-repeat: no-repeat; background-image: url(rc?a=af&c=fff1a8&w=4&h=4);"/><td class="Ptde9b"/><td class="EGPikb" style="background-position: -4px; background-repeat: no-repeat; background-image: url(rc?a=af&c=fff1a8&w=4&h=4);"/></tr></tbody></table></div>';
+
+
+//                            newmsgdiv.innerHTML = '<div class="n38jzf" style=""><table cellspacing="0" cellpadding="0" class="cyVRte"><tbody><tr><td class="EGPikb" style="background-position: 0px; background-repeat: no-repeat; background-image: url(rc?a=af&c=fff1a8&w=4&h=4);"/><td class="Ptde9b"/><td class="EGPikb" style="background-position: -4px 0px; background-repeat: no-repeat; background-image: url(rc?a=af&c=fff1a8&w=4&h=4);"/></tr><tr><td class="Ptde9b"/><td class="m14Grb">' +
+//cGmail2.i18n.getString("MessageSend") + '</td><td class="Ptde9b"/></tr><tr><td class="EGPikb" style="background-position: 0px -4px; background-repeat: no-repeat; background-image: url(rc?a=af&c=fff1a8&w=4&h=4);"/><td class="Ptde9b"/><td class="EGPikb" style="background-position: -4px; background-repeat: no-repeat; background-image: url(rc?a=af&c=fff1a8&w=4&h=4);"/></tr></tbody></table></div>';
 
                             function removeNote(e)
                             {
@@ -422,13 +426,13 @@ cGmail2.i18n.getString("MessageSend") + '</td><td class="Ptde9b"/></tr><tr><td c
                                 this.removeChild(newmsgdiv);
                             }
                             msgs.addEventListener("DOMNodeInserted", removeNote, false);
-                        }
+                        */}
                     }
 //					}
             }
             // DEPRECATED: this.statusMessage.statusDiv. It is BAD when sending a reply that is non-encrypted, followed by an encrypted reply.
             // 0.3.2: removed: div[@class='fgrX7c']//div[@class='IY0d9c']/div[contains(@class, 'EGSDee')]/
-            var sD = d.evaluate(".//div/div[contains(@class,'n38jzf')]", d.body, null, XPathResult.FIRST_ORDERED_NODE_TYPE, null).singleNodeValue;
+            var sD = d.evaluate(".//div/div[contains(@class,'b8')]", d.body, null, XPathResult.FIRST_ORDERED_NODE_TYPE, null).singleNodeValue;
 //				printAncestors("statusDiv", sD);
             cGmail2.i18n = this.i18n;
             sD.addEventListener("DOMAttrModified", changeStatusMessage, false);
@@ -440,7 +444,7 @@ cGmail2.i18n.getString("MessageSend") + '</td><td class="Ptde9b"/></tr><tr><td c
             var discardcanceled = this.discardButton.dispatchEvent(discardevent);
             var discardevent=d.createEvent("MouseEvents");
             discardevent.initMouseEvent("mouseup", true, true, d.defaultView, 0, 0, 0, 0, 0, false, false, false, false, 0, null);
-            var discardcanceled = this.discardButton.dispatchEvent(discardevent);*/
+            var discardcanceled = this.discardButton.dispatchEvent(discardevent);
 
 
             //FireGPG :
